Feat: Created Register & Activate User Auth endpoints (including storing tokens in DB)  with Transaction support
